@@ -34,6 +34,15 @@ HOW TO UPDATE?
 -----------------------------------------------------------------------
 
 Breaking Changes:
+- Added an extra 'void* renderer_user_data' parameter to ImDrawCallback (stored in ImDrawCmd::UserCallback).
+  This allows custom rendering back-ends to pass custom local rendering information to the callback.
+  IF YOU USE AN OLD RENDERER BACK-END OR COPIED A RENDERER BACK-END BEFORE 1.71,
+  YOUR COMPILATION WILL FAIL ON THIS LINE:
+      pcmd->UserCallback(cmd_list, pcmd);
+  You can fix it by adding a trailing NULL parameter:
+      pcmd->UserCallback(cmd_list, pcmd, NULL);
+  If your back-end needs to support multiple versions, you can use a '#if (IMGUI_VERSION_NUM >= 17004)' test.
+  If you are using an old copied back-end, consider building the one directly in the imgui repository.
 - IO: changed AddInputCharacter(unsigned short c) signature to AddInputCharacter(unsigned int c).
 - Renamed SetNextTreeNodeOpen() to SetNextItemOpen(). Kept inline redirection function (will obsolete).
 - Window: rendering of child windows outer decorations (e.g. bg color, border, scrollbars) is now
